# RAMon

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  auth.py  chatbot_graph.py  chatbot_usage.py  config.py  crontab  dependencies.py  entrypoint.sh  index.html  middleware.py  models.py  product_catalog.py  requirements.txt  server.py  setup_db.py  show_graph.py  websocket_handler.py  yoyo.ini
chatbot/: README.md  pyproject.toml
chatbot/chatbot/: __init__.py  builder.py  config.py  factory.py  graph_utils.py
chatbot/chatbot/adapters/: __init__.py  embedding.py  product_repository.py
chatbot/chatbot/application/: __init__.py  graph.py  parser.py  relevance.py  service.py  settings.py
chatbot/chatbot/domain/: __init__.py  ports.py  product.py  state.py
chatbot/chatbot/infrastructure/: __init__.py  product_catalog.py
chatbot/chatbot/infrastructure/tools/: __init__.py  recommend_products.py  search_component_spec.py
chatbot/chatbot/tools/: __init__.py  recommend_products.py  search_component_spec.py
cli/: .env.example  README.md  demo.py  products.csv  requirements.txt  show_graph.py  test_cases.csv  test_chatbot.py  test_results.csv
deploy/: docker-compose.prod.yml  docker-compose.yml
fixtures/: .gitkeep
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.cjs  server.js  vite.config.ts  vite.widget.config.ts
nginx/: nginx.conf
scripts/: init-ssl.sh
(+179 files in other folders)
